creating a collapse button and a title bar

--- a/FKR32_assistant/FKR32_assistant.csproj
+++ b/FKR32_assistant/FKR32_assistant.csproj
@@ -102,11 +102,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Resource Include="Images\collapsetotraybutton.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\logo.png" />
+    <Resource Include="Images\logo.ico" />
+    <Resource Include="Images\LogoTray.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
