set up the interface of the tender page

--- a/FKR32_assistant/FKR32_assistant.csproj
+++ b/FKR32_assistant/FKR32_assistant.csproj
@@ -58,6 +58,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="StagesTender.cs" />
+    <Compile Include="Theme\MenuButtonTheme.xaml.cs">
+      <DependentUpon>MenuButtonTheme.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
